PROJECT(LineFromPointCloud)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

ADD_DEFINITIONS(-DUNICODE)

FILE(GLOB_RECURSE HDRS_FILES *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp *.c *.cc *.cxx)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

message(${OpenCV_LIBS})

# ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS_FILES} ${HDRS_FILES})
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})

add_library(${PROJECT_NAME} SHARED ${SRCS_FILES} ${HDRS_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${LineFromPointCloud_INC})
# set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})

